--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/brodiniconv1" href="/brodiniconv1.svg" />
+    <link rel="icon" type="image/brodinfavresize" href="/brodinfavresize.svg" />
     <link rel="stylesheet" href="./output.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brodin Fitness</title>
